# cellulo_swarm_practical_base

./: README.md
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/: cellulo-robot-pool-launch-selector.pro
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/cellulo-robot-pool-launch-selector-standalone/: cellulo-robot-pool-launch-selector.sh
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/cellulo-robot-pool-launch-selector-standalone/lib/: libQt5Bluetooth.so.5  libQt5Concurrent.so.5  libQt5Network.so.5  libQt5Qml.so.5  libQt5Svg.so.5  libQt5WaylandClient.so.5  libQt5WaylandCompositor.so.5  libQt5XcbQpa.so.5
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/cellulo-robot-pool-launch-selector-standalone/qml/Cellulo/: Leds.qml  MacAddrSelector.qmlc  Toast.qmlc  ToastManager.qmlc  qmldir
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/cellulo-robot-pool-launch-selector-standalone/qml/QtQuick/Controls/Private/: CalendarUtils.jsc  StackView.jsc  style.jsc
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/src/: main.qml
PoolGui_to_LaunchFile/cellulo-robot-pool-launch-selector/standalone/lib/: libQt5DBus.so.5  libQt5EglFSDeviceIntegration.so.5
analysis/: readme.md  txt_to_csv.py
installation instructions/: Installation.txt
ros_cellulo_practical/: CMakeLists.txt  package.xml
ros_cellulo_practical/include/ros_cellulo_aggregation/: RosCelluloAggregation.hpp
ros_cellulo_practical/include/ros_cellulo_coverage/: RosCelluloCoverage.hpp
ros_cellulo_practical/launch/: aggregation.launch  aggregation_3.launch  aggregation_5.launch  aggregation_webots.launch  basic.launch  coverage.launch  coverage_3.launch  coverage_5.launch  coverage_webots.launch  interaction.launch
ros_cellulo_practical/rviz/: cellulo_rviz.rviz
ros_cellulo_practical/src/ros_cellulo_aggregation/: RosCelluloAggregation.cpp  ros_cellulo_aggregation_node.cpp
ros_cellulo_practical/src/ros_cellulo_coverage/: RosCelluloCoverage.cpp
ros_cellulo_practical/src/ros_cellulo_interaction/: ros_cellulo_interaction_node.cpp  ros_cellulo_leader_node.cpp
ros_cellulo_swarm/: CMakeLists.txt  package.xml
ros_cellulo_swarm/include/ros_cellulo_reduced/: RosCellulo.hpp
ros_cellulo_swarm/include/ros_cellulo_sensor/: RosCelluloSensor.hpp
ros_cellulo_swarm/meshes/: cellulo.STL
ros_cellulo_swarm/msg/: cellulo_coord.msg  cellulo_kidnapped_msg.msg  cellulo_pose_velocity.msg  cellulo_simpleVibrate.msg  cellulo_touch_key.msg  cellulo_vibrateOnMotion.msg  cellulo_visual_effect.msg  ros_cellulo_sensor.msg
ros_cellulo_swarm/rviz/: cellulo_rviz.rviz
ros_cellulo_swarm/src/: cellulo-ros-python.py  teleop_twist_keyboard.py
ros_cellulo_swarm/src/ros_cellulo_reduced/: RosCellulo.cpp  ros_cellulo_reduced_node.cpp
ros_cellulo_swarm/src/ros_cellulo_sensor/: RosCelluloSensor.cpp  ros_cellulo_sensor_node.cpp
ros_cellulo_swarm/srv/: CelluloState.srv
